[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "roam"
description-file = "README.md"
author = "James Murty"
author-email = "james@murty.co"
home-page = "https://github.com/jmurty/roam/"
requires-python=">=3.6"
license="Apache 2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
]
